--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "dependencies": {
     "@grammyjs/hydrate": "^1.4.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.0",
