--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@grammyjs/hydrate": "^1.4.1",
     "date-fns": "^3.6.0",
+    "debug": "^4.3.5",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.0",
